--- a/widget/src/styles/index.css
+++ b/widget/src/styles/index.css
@@ -7,6 +7,7 @@
     "Helvetica Neue", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color-scheme: light dark;
 }
 
 * {
